--- a/Transmission/settings.json
+++ b/Transmission/settings.json
@@ -55,11 +55,11 @@
     "rpc-whitelist": "127.0.0.1,70.27.235.33,192.168.2.*",
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
-    "script-torrent-done-enabled": false,
-    "script-torrent-done-filename": "",
+    "script-torrent-done-enabled": true,
+    "script-torrent-done-filename": "/media/pi/PiTV/Torrents/format-media.sh",
     "seed-queue-enabled": true,
     "seed-queue-size": 0,
-    "speed-limit-down": 10000,
+    "speed-limit-down": 100,
     "speed-limit-down-enabled": false,
     "speed-limit-up": 0,
     "speed-limit-up-enabled": true,
