--- a/Transmission/settings.json
+++ b/Transmission/settings.json
@@ -12,7 +12,7 @@
     "blocklist-url": "http://john.bitsurge.net/public/biglist.p2p.gz",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "/media/pi/PiTV/Torrents",
+    "download-dir": "/media/pi/VirgaExternal/Torrents",
     "download-limit": 100,
     "download-limit-enabled": false,
     "download-queue-enabled": true,
@@ -56,7 +56,7 @@
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": true,
-    "script-torrent-done-filename": "/media/pi/PiTV/Torrents/format-media.sh",
+    "script-torrent-done-filename": "/media/pi/VirgaExternal/Torrents/format-media.sh",
     "seed-queue-enabled": true,
     "seed-queue-size": 0,
     "speed-limit-down": 100,
