--- a/bit-finder/package.json
+++ b/bit-finder/package.json
@@ -1,17 +1,20 @@
 {
   "name": "bit-finder",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "express": "~4.16.1",
+    "hjs": "~0.0.6",
+    "http-errors": "~1.6.3",
     "imdb-api": "^4.0.3",
     "lodash": "^4.17.15",
+    "morgan": "~1.9.1",
     "rarbg-api": "^1.1.3"
   }
 }
