--- a/bit-finder/package.json
+++ b/bit-finder/package.json
@@ -15,6 +15,8 @@
     "imdb-api": "^4.0.3",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
-    "rarbg-api": "^1.1.3"
+    "pm2": "^4.3.1",
+    "rarbg-api": "^1.1.3",
+    "transmission-promise": "^1.1.4"
   }
 }
