--- a/bit-finder/package.json
+++ b/bit-finder/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -17,6 +18,7 @@
     "morgan": "~1.9.1",
     "pm2": "^4.3.1",
     "rarbg-api": "^1.1.3",
+    "torrent-search-api": "^2.1.1",
     "transmission-promise": "^1.1.4"
   }
 }
