--- a/bit-finder/package.json
+++ b/bit-finder/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "prod": "./node_modules/.bin/pm2-runtime start ./bin/www"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
@@ -16,7 +17,7 @@
     "imdb-api": "^4.0.3",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
-    "pm2": "^4.3.1",
+    "pm2": "^4.4.0",
     "rarbg-api": "^1.1.3",
     "torrent-search-api": "^2.1.1",
     "transmission-promise": "^1.1.4"
