--- a/bit-finder/package.json
+++ b/bit-finder/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/pm2 start ./bin/www"
-    "dev": "nodemon ./bin/www",
+    "start": "./node_modules/.bin/pm2 start ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
