--- a/bit-finder/.env.sample
+++ b/bit-finder/.env.sample
@@ -1,4 +1,7 @@
+# OMDB is not used in the current version, so this key is only required if
+# this changes
 OMDB_API_KEY=XXXXXXXX
+
 NODE_ENV=development
 TRANSMISSION_USERNAME=
 TRANSMISSION_PASSWORD=
